@@ -12,22 +12,16 @@
 package org.kitodo.production.forms.dataeditor;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
-import jakarta.faces.model.SelectItem;
-
-import org.apache.commons.lang3.tuple.ImmutablePair;
 import org.apache.commons.lang3.tuple.Pair;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.kitodo.api.dataformat.LogicalDivision;
 import org.kitodo.api.dataformat.PhysicalDivision;
-import org.kitodo.api.dataformat.View;
 import org.kitodo.config.ConfigCore;
 import org.kitodo.config.enums.ParameterCore;
 import org.kitodo.exceptions.InvalidImagesException;
@@ -271,6 +265,8 @@ public class PaginationPanel {
                 "paginierung_spalte.svg"));
         selectPaginationModeItems.add(new IllustratedSelectItem(PaginatorMode.FOLIATION, "sheetCounting",
                 "paginierung_blatt.svg"));
+        selectPaginationModeItems.add(new IllustratedSelectItem(PaginatorMode.FOLIATION_WITH_EMPTY_PAGE, "sheetCountingWithEmptyPage",
+                "paginierung_blatt_leerseite.svg"));
         selectPaginationModeItems.add(new IllustratedSelectItem(PaginatorMode.RECTOVERSO_FOLIATION, "sheetCountingRectoVerso",
                 "paginierung_blatt_rectoverso.svg"));
         selectPaginationModeItems.add(new IllustratedSelectItem(PaginatorMode.VERSORECTO_FOLIATION, "sheetCountingVersoRecto",
@@ -304,12 +300,12 @@ public class PaginationPanel {
         List<Separator> pageSeparators = Separator.factory(ConfigCore.getParameter(ParameterCore.PAGE_SEPARATORS));
         try {
             String initializer = paginationTypeSelectSelectedItem.format(selectPaginationModeSelectedItem.getValue(),
-                paginationStartValue, fictitiousCheckboxChecked, pageSeparators.get(0).getSeparatorString());
+                paginationStartValue, fictitiousCheckboxChecked, pageSeparators.getFirst().getSeparatorString());
             Paginator paginator = new Paginator(initializer);
             List<PhysicalDivision> physicalDivisions = dataEditor.getWorkpiece()
                     .getAllPhysicalDivisionChildrenSortedFilteredByPageAndTrack();
             if (selectPaginationScopeSelectedItem) {
-                for (int i = itemsForPagination.get(0); i < physicalDivisions.size(); i++) {
+                for (int i = itemsForPagination.getFirst(); i < physicalDivisions.size(); i++) {
                     physicalDivisions.get(i).setOrderlabel(paginator.next());
                 }
             } else {
@@ -331,7 +327,7 @@ public class PaginationPanel {
      */
     public void show() {
         paginationTypeSelectSelectedItem = resolveDefaultPaginationType();
-        selectPaginationModeSelectedItem = selectPaginationModeItems.get(0);
+        selectPaginationModeSelectedItem = selectPaginationModeItems.getFirst();
         paginationStartValue = "1";
         fictitiousCheckboxChecked = false;
         selectPaginationScopeSelectedItem = Boolean.TRUE;
