@@ -81,7 +81,7 @@ public class RoleServiceIT {
         Role role = new Role();
         role.setTitle("To Remove");
         roleService.save(role);
-        Role foundRole = roleService.getByQuery("FROM Role WHERE title = 'To Remove'").get(0);
+        Role foundRole = roleService.getByQuery("FROM Role WHERE title = 'To Remove'").getFirst();
         assertEquals("To Remove", foundRole.getTitle(), "Additional user group was not inserted in database!");
 
         roleService.remove(foundRole);
@@ -91,7 +91,7 @@ public class RoleServiceIT {
         role = new Role();
         role.setTitle("To remove");
         roleService.save(role);
-        foundRole = roleService.getByQuery("FROM Role WHERE title = 'To remove'").get(0);
+        foundRole = roleService.getByQuery("FROM Role WHERE title = 'To remove'").getFirst();
         assertEquals("To remove", foundRole.getTitle(), "Additional user group was not inserted in database!");
 
         roleService.remove(foundRole.getId());
@@ -107,10 +107,10 @@ public class RoleServiceIT {
 
         Role role = new Role();
         role.setTitle("Cascados Group");
-        role.getUsers().add(userService.getByQuery("FROM User WHERE login = 'Cascados' ORDER BY id DESC").get(0));
+        role.getUsers().add(userService.getByQuery("FROM User WHERE login = 'Cascados' ORDER BY id DESC").getFirst());
         roleService.save(role);
 
-        Role foundRole = roleService.getByQuery("FROM Role WHERE title = 'Cascados Group'").get(0);
+        Role foundRole = roleService.getByQuery("FROM Role WHERE title = 'Cascados Group'").getFirst();
         assertEquals("Cascados Group", foundRole.getTitle(), "Additional user was not inserted in database!");
 
         roleService.remove(foundRole);
@@ -120,7 +120,7 @@ public class RoleServiceIT {
         size = userService.getByQuery("FROM User WHERE login = 'Cascados'").size();
         assertEquals(1, size, "User was removed from database!");
 
-        userService.remove(userService.getByQuery("FROM User WHERE login = 'Cascados'").get(0));
+        userService.remove(userService.getByQuery("FROM User WHERE login = 'Cascados'").getFirst());
     }
 
     @Test
